# napari-roi

./: .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: deploy.yml
.napari/: DESCRIPTION.md
.napari-hub/: config.yml
napari_roi/: __init__.py  _roi.py  _roi_widget.py  napari.yaml
napari_roi/_qt/: __init__.py  file_line_edit.py  mutable_sequence_wrapper.py  roi_layer_accessor.py  roi_table_model.py
napari_roi/qt/: __init__.py  _roi_layer_accessor.py  _roi_table_model.py  utils.py
