[metadata]
name = napari-roi
author = Jonas Windhager
author_email = jonas.windhager@uzh.ch
license = MIT
url = https://github.com/BodenmillerGroup/napari-roi
description = Select regions of interest (ROIs) using napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Framework :: napari
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Image Processing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/BodenmillerGroup/napari-roi/issues
    Documentation = https://github.com/BodenmillerGroup/napari-roi#README.md
    Source Code = https://github.com/BodenmillerGroup/napari-roi
    User Support = https://github.com/BodenmillerGroup/napari-roi/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    napari>=0.4.13
    napari-plugin-engine>=0.1.4
    numpy
    pandas
use_scm_version =
    write_to = napari_roi/_version.py

[options.entry_points] 
napari.plugin = 
    napari-roi = napari_roi

[flake8]
max-line-length = 88
extend-ignore = E203
