[metadata]
name = napari-roi
url = https://github.com/BodenmillerGroup/napari-roi
author = Jonas Windhager
author_email = jonas@windhager.io
maintainer = Milad Adibi
maintainer_email = milad.adibi@uzh.ch
classifiers =
    Framework :: napari
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
license = MIT
license_files = LICENSE
description = Select regions of interest (ROIs) using napari
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/BodenmillerGroup/napari-roi/issues
    Documentation = https://github.com/BodenmillerGroup/napari-roi#README.md
    Source Code = https://github.com/BodenmillerGroup/napari-roi
    User Support = https://github.com/BodenmillerGroup/napari-roi/issues

[options]
include_package_data = True
install_requires =
    numpy
    pandas
    qtpy
python_requires = >=3.8
packages = find:

[options.package_data]
napari_roi = napari.yaml

[options.entry_points]
napari.manifest =
    napari-roi = napari_roi:napari.yaml
